Minor styling and spacing tweaks. Fixing on a google font.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,129 +1,143 @@
 html {
-        height: 100%;
-        padding: 0;
-    }
-    
-    body {
-       background: black url("../images/bg.jpg") no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: 100% 100%;
-        color: white;
-    }
-    
-    #map {
-        border: solid 2px white;
-        width: 350px;
-        height: 350px;
-        padding: 0;
-        margin: 0 auto;
+    height: 100%;
+    padding: 0;
+}
+
+body {
+    background: black url("../images/bg.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: 100% 100%;
+    color: white;
+    /*font-family: 'Bree Serif', serif;*/
+    /*font-family: 'Cherry Cream Soda', cursive;*/
+    /*font-family: 'Merienda One', cursive;*/
+    /*font-family: 'Lemon', cursive;*/
+    /*font-family: 'Salsa', cursive;*/
+    font-family: 'Lemonada', cursive;
+}
+
+#map {
+    border: solid 2px white;
+    width: 350px;
+    height: 350px;
+    padding: 0;
+    margin: 0 auto;
 }
 
 .panel {
     background: transparent;
 }
-    
-    #right-panel {
-        padding: 3px;
-        overflow-y: scroll;
-        border: solid 2px black;
-        color: white;
-        margin-left: 15px;
-        width: 500px;
-        height: 60%;
-        margin: 0 auto;
-        background-color: rgba(255,255,255,0.8);
-        font-size: 20px;
-        font-weight: 400;   
-    }
-    
-    .submit {
-        margin-bottom: 20px;
 
-    }
-    
-    #tracklistcontainer {
-        overflow: scroll;
-        border: 2px solid white;
-        width: 70%;
-        height: 300px;
-        margin: 0 auto;
-        padding: 10px;
-    }
-    
-    #tracklist {
-        font-size: 25px;
-        padding: 5px;
-        text-align: left;
-    }
+#right-panel {
+    padding: 3px;
+    overflow-y: scroll;
+    border: solid 2px black;
+    color: white;
+    margin-left: 15px;
+    width: 400px;
+    height: 60%;
+    margin: 0 auto;
+    background-color: rgba(255, 255, 255, 0.8);
+    font-size: 20px;
+    font-weight: 400;
+}
 
-    #tracklist> p{
-        padding: 3px;
-    }
-    
-    h4 {
-        margin: 0px;
-    }
+.submit {
+    margin-bottom: 20px;
+}
 
-    h3 {
-        margin-top: 10px;
-        margin-bottom: 15px;
-    }
-    
-    .displaytrack {
-        margin: 0px;
-        cursor: pointer;
-    }
-    .modal-content{
-        color: black;
-    }
+#tracklistcontainer {
+    overflow: scroll;
+    border: 2px solid white;
+    width: 70%;
+    height: 300px;
+    margin: 0 auto;
+    padding: 10px;
+}
 
-    .modal-backdrop {
-        background-color: transparent;
-    }
+#tracklist {
+    font-size: 25px;
+    padding: 5px;
+    text-align: left;
+}
 
-    #artist-input {
-        width: 80%;
-        height: 40px;
-        font-size: 20px;
-    }
+#tracklist> p {
+    padding: 3px;
+}
 
-    #start, #end {
-       border: white !important;
-       color: white;
-       width: 60%;
-       margin: 0 auto;
-       height: 40px;
-       font-size: 20px;
-       color: black;
-    }
+h4 {
+    margin: 0px;
+}
 
-    label {
-        font-size: 20px;
-        margin-right: 10px;
-    }
+h3 {
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
 
-    i {
-        margin-right: 10px;
-    }
+.displaytrack {
+    margin: 0px;
+    cursor: pointer;
+}
 
-    .weather {
-        font-size: 20px;
-        
-    }
+.modal-content {
+    color: black;
+}
 
-    .weatherStats {
-        border: 2px solid white;
-        min-height: 200px;
-        width: 80%;
-        padding: 10px;
-    }
+.modal-backdrop {
+    background-color: transparent;
+}
 
-    .weather>span {
-        margin-left: -100px;
-    }
+#artist-input {
+    width: 80%;
+    height: 40px;
+    font-size: 20px;
+}
 
-    #playlistlength {
-        margin: 3px;
-    }
+#start,
+#end {
+    border: white !important;
+    color: white;
+    width: 60%;
+    margin: 0 auto;
+    height: 40px;
+    font-size: 20px;
+    color: black;
+}
+
+label {
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+i {
+    margin-right: 10px;
+}
+
+.weather {
+    font-size: 20px;
+    margin: 0 auto;
+}
+
+.weatherStats {
+    border: 2px solid white;
+    min-height: 200px;
+    width: 80%;
+    padding: 10px;
+}
+
+
+/* .weather>span {
+    margin-left: -100px;
+}
+*/
+
+#playlistlength {
+    margin: 3px;
+}
+
+
+/* TO-DO- 
+MEDIA QUERIES FOR MINOR TWEAKING FOR MOBILE VIEW
+*/
